apps/base/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wordpress.k8s-demo.de
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-hetzner
spec:
  tls:
    - hosts:
        - wordpress.k8s-demo.de
      secretName: wordpress-tls
  rules:
    - host: wordpress.k8s-demo.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
